# knowledge_base_repo

./: .env.example  .gitignore  .mcp.json  AGGRESSIVE_TOOL_CALLING_FIX.md  CLIENT_UPDATE_SUMMARY.md  CONCURRENT_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  MAKEFILE_REFERENCE.md  Makefile  README.md  README_LANGCHAIN.md  RUNPOD_README.md  USAGE.md  deploy.sh  main.py  monitor_progress.sh  pyproject.toml  runpod_batch_transcribe.py  runpod_fastapi_server.py  runpod_transcribe.sh  setup_runpod.sh  test_concurrent_clients.py  test_langchain_similarity.py  test_new_logging.py  test_phase3.py  test_ram_filesystem.py  test_runpod.sh  test_syntax.py  transcribe_client.py  transcribe_client_old.py
.claude/: config.json
audio2text/: audio_to_text.py  format_text.py
content_repo/Alex_Hormozi/: 1.txt  10_different_ways_to_break_down_making_dollar1_million.txt  10_keys_to_a_terrible_business_partnership_guaranteed.txt  10_millionaires_asked_me_how_to_get_richer.txt  10x_revenue_with_1_new_sales_process_you_can_steal_it.txt  10x_your_profit._10x_your_pricing._10x_your_business.txt  13_years_of_no_bs_business_advice_in_79_mins.txt  14_life_lessons_i_wish_i_knew_earlier.txt  14_money_mistakes_to_avoid_in_your_20's.txt  14_years_of_marketing_advice_in_35_minutes.txt  17_life_changing_conversations_i_wish_i_had_earlier.txt  1_simple_mental_technique_that_will_skyrocket_your_sales...txt  1_skill_that_is_hard_to_learn,_but_will_pay_off_forever.txt  30_minutes_of_sales_training_that_will_explode_your_business_in_2022.txt  3_hours_of_money_making_advice_you_needed_to_know_yesterday.txt  3_simple_fixes_that_grow_any_business.txt  3_simple_steps_to_close_any_sale.txt  3_steps_to_starting_or_fixing_any_business.txt  3_ways_to_do_what_you_love_and_get_wealthy_too.txt  42_recession_proof_money_hacks.txt  4_steps_to_unf_your_business.txt  (+289 more)
dk_books/: How_to_open_the_door_to_your_future_-_Dan_S_Kennedy.md  Making_Them_Believe_-_Dan_S_Kennedy.md  No_BS_Guide_to_Brand-Building_by_Direct_-_Dan_S_Kennedy.md  No_BS_Marketing_to_the_Affluent_-_Dan_S_Kennedy.md  No_BS_Price_Strategy_-_Dan_S_Kennedy.md  No_BS_Time_Management_for_Entrepreneurs_-_Dan_S_Kennedy.md  No_BS_Trust_Based_Marketing__The_Ultimat_-_Dan_S_Kennedy.md  The_Ultimate_Marketing_Plan_-_Dan_S_Kennedy.md  The_Ultimate_Sales_Letter_-_Dan_S_Kennedy.md
dk_rag/: COMPILATION_REPORT.md  GEMINI_API_CONFIGURATION.md  Makefile  PHASE1_MAP_REDUCE_IMPLEMENTATION.md  PHASE1_README.md  README.md  generate_copy.py  main.py  openrouter_config.yaml  prompts.py  rag_system.py  test_agent.py  test_compilation.py  test_config_usage.py  test_map_reduce.py
docs/: adding-persona-skills.md
grep_startup/: 10_profitable_newsletter_business_ideas_to_start_in_2025.txt  1_profitable_startup_idea_hiding_in_plain_sight.txt  2_dollar1mplus_edtech_startups_you_can_launch_tomorrow.txt  dollar100mplusyear_founder_reveals_a_brilliant_startup_idea_built_on_top_of_twitter.txt  dollar1m_startup_trends_for_2024,_with_michael_karnjanaprakorn.txt  dollar30m_by_age_19_and_where_you_should_build_today.txt
pdf2text/: Makefile  README.md  pdf_to_markdown.py  split_markdown_chapters.py
scripts/: verify_knowledge_duplicates.py
yt_download/: youtube_mp3_downloader.py  youtube_test_urls.txt
(+4900 files in other folders)
