[tool.poetry]
name = "pdf-to-markdown"
version = "0.1.0"
description = "Simple PDF to Markdown converter for LLM analysis"
authors = ["User <user@example.com>"]
readme = "README.md"
packages = [{include = "pdf2text"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf4llm = "^0.0.17"
openai = "^1.12.0"
litellm = "^1.52.0"
pyyaml = "^6.0.1"
numpy = "^2.0.0"
scikit-learn = "^1.3.0"
python-dotenv = "^1.0.0"
openai-whisper = "^20250625"
sentence-transformers = "^5.1.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
tqdm = "^4.66.0"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"